--- a/res/main.yaml
+++ b/res/main.yaml
@@ -12,7 +12,7 @@
     UIDФункцияСистемы: "98999f57-13dc-11e8-aed1-005056a5c4e8"
     ПрофильПользователя: "Administrator"
     УровеньОтчета1: "Drive"
-    УровеньОтчета2: "Purchase"
+    УровеньОтчета2: "Parent"
 
 ПараметрыСценария:
 
