--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "license": "MIT",
   "repository": "https://github.com/kakoytochelik/1cDriveTestHelper",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "engines": {
     "vscode": "^1.98.0"
   },
@@ -108,7 +108,7 @@
         "properties": {
           "1cDriveHelper.paths.emptyInfobase": {
             "type": "string",
-            "default": "C:\\EmptyIB\\",
+            "default": "",
             "description": "Путь к каталогу пустой файловой информационной базы (EmptyInfobasePath).",
             "order": 30
           },
