--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "license": "MIT",
   "repository": "https://github.com/kakoytochelik/1cDriveTestHelper",
-  "version": "1.7.1",
+  "version": "1.8.0",
   "engines": {
     "vscode": "^1.98.0"
   },
@@ -35,7 +35,7 @@
           "1cDriveHelper.features.enableAssembleTests": {
             "type": "boolean",
             "default": true,
-            "description": "Включить панель \"Сборка Тестов\".",
+            "description": "Включить панель \"Сборка\".",
             "order": 11
           },
           "1cDriveHelper.editor.autoCollapseOnOpen": {
@@ -108,7 +108,7 @@
         "properties": {
           "1cDriveHelper.params.splitFeatureFiles": {
             "type": "boolean",
-            "default": true,
+            "default": false,
             "description": "Сохранять при сборке приложенные к тестам файлы в отдельную папку.",
             "order": 33
           },
@@ -239,6 +239,11 @@
       {
         "command": "1cDriveHelper.openBuildFolder",
         "title": "1C:Drive - Открыть папку сборки",
+        "category": "1C:Drive Test Helper"
+      },
+      {
+        "command": "1cDriveHelper.createFirstLaunchZip",
+        "title": "1C:Drive - Собрать архив FirstLaunch",
         "category": "1C:Drive Test Helper"
       }
     ],
@@ -372,6 +377,10 @@
         },
         {
           "command": "1cDriveHelper.checkAndFillScriptParameters",
+          "when": "true"
+        },
+        {
+          "command": "1cDriveHelper.createFirstLaunchZip",
           "when": "true"
         }
       ]
